# mqttJeedomDisplay

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/WaveShare/: CMakeLists.txt  Kconfig  idf_component.yml
components/WaveShare/src/: WaveShare.c  WaveShare.h  gt911.c  gt911.h  hardLvgl.c  hardLvgl.h  i2c.c  i2c.h  ioExpander.cpp  ioExpander.h  nvsFlash.c  nvsFlash.h  rgbPanel.c  rgbPanel.h  sdCard.c  sdCard.h  usb.cpp  usb.h
fonts/: my_font_montserrat_18.c  my_font_montserrat_24.c  my_font_montserrat_30.c
main/: CMakeLists.txt  html_footer.html  html_header.html  idf_component.yml  json.cpp  json.h  main.c
spiffs_image/: display_exemple.json  mqtt_exemple.json
